changed dark mode image with correct extension

--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,7 @@ h1 {
     background: url(../img/download-cloud-light.svg) no-repeat;
 }
 button {
-    background: url(../img/sun.jpg) no-repeat;
+    background: url(../img/sun.png) no-repeat;
     color: transparent;
     box-shadow: none;
     border: none;
